spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__truncating_to_larger_value.snap
---
source: spade-tests/src/hir_lowering.rs
---
// lifeguard spade#125
mod std{mod conv{ 
    fn trunc<#N, #M>(x: int<N>) -> int<M> __builtin__
}}
use std::conv::trunc;
fn main() -> int<8> {
    let a: int<4> = 0;
    let b: int<8> = std::conv::trunc(a);
    b
}


error: Truncating to a larger value
  ┌─ testinput:8:38
  │
8 │     let b: int<8> = std::conv::trunc(a);
  │                     -----------------^-
  │                     │                │
  │                     │                This value is 4 bytes
  │                     The value is truncated to 8 bytes here
  │
  = note: Truncation can only remove bits


